--- a/trip_planner_front/src/component/tourPagination.css
+++ b/trip_planner_front/src/component/tourPagination.css
@@ -13,7 +13,7 @@
 }
 .tour-paging-wrap > .page-item {
   min-width: 40px;
-  height: 20px;
+  /* height: 20px; */
   text-align: center;
   line-height: 20px;
   padding: 5px;
