--- a/trip_planner_front/src/page/blog/blog.css
+++ b/trip_planner_front/src/page/blog/blog.css
@@ -18,7 +18,11 @@
 
  */
 .blogFrm {
-  width: 680px;
+  width: 800px;
+  border-left: 1px solid var(--gray_04);
+  border-right: 1px solid var(--gray_04);
+  box-sizing: border-box;
+  padding: 70px;
 }
 .blog-thumbnail {
   text-align: center;
@@ -26,10 +30,19 @@
 .blog-thumbnail > img {
   width: 450px;
   height: 250px;
+  border-radius: 10px;
 }
 .blog-thumbnail-wrap {
-  text-align: right;
+  width: 100%;
+  text-align: center;
   margin-bottom: 20px;
+}
+.blog-thumbnail-wrap label {
+  margin-right: 10px;
+}
+.blog-thumbnail-wrap input {
+  background-color: #c1c1c1;
+  border-radius: 5px;
 }
 .blog-list-title-wrap {
   margin-left: 10px;
