--- a/trip_planner_front/src/page/common/common.css
+++ b/trip_planner_front/src/page/common/common.css
@@ -51,10 +51,10 @@ html{font-family: pt-r;}
 .wrap{display: flex; flex-direction: column; min-height: 100vh;}
 .container{flex: 1; padding: 0 40px;}
 .contents{width: 100%; max-width: 1280px; margin: 0 auto; padding: 60px 0;}
-h2{margin-bottom: 48px; color: #000; font-family: pt-b; font-size: 24px; font-weight: bold; text-align: center; line-height: 1.5;}
-h3{margin-bottom: 24px; color: #000; font-family: pt-b; font-size: 20px; font-weight: bold; line-height: 1.5;}
-h4{margin-bottom: 20px; color: #000; font-family: pt-b; font-size: 16px; font-weight: bold; line-height: 1.5;}
-h5{margin-bottom: 8px; color: #000; font-family: pt-b; font-size: 14px; font-weight: bold; line-height: 1.5;}
+h2{margin-bottom: 48px; color: #000; font-family: pt-b; font-size: 24px; text-align: center; line-height: 1.5;}
+h3{margin-bottom: 24px; color: #000; font-family: pt-b; font-size: 20px; line-height: 1.5;}
+h4{margin-bottom: 20px; color: #000; font-family: pt-b; font-size: 16px; line-height: 1.5;}
+h5{margin-bottom: 8px; color: #000; font-family: pt-b; font-size: 14px; line-height: 1.5;}
 
 /* header */
 .header{position: sticky; top: 0; background-color: #fff; border-bottom: 1px solid var(--line_03); z-index: 1000;}
@@ -89,18 +89,14 @@ h5{margin-bottom: 8px; color: #000; font-family: pt-b; font-size: 14px; font-wei
 .badges{display: flex; flex-wrap: wrap; gap: 8px;}
 
 /* modal */
-.modal{position:fixed; left:0; right:0; top:0; bottom:0; background-color:rgba(0,0,0,0.5); z-index:1002;}
-.modal .modal_wrap{position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); display:flex; flex-direction:column; gap:20px; width:444px; max-height:375px; padding:40px 20px; background-color:#fff; border-radius:8px;}
-.modal.lg .modal_wrap{width:512px; max-height:480px;}
-.modal .modal_title{font-size:20px; font-weight:bold; line-height:30px; text-align:center;}
-.modal .title_sub{margin-top:12px; color:var(--gray_04); font-size:14px; line-height:1.5; text-align:center;}
-.modal .modal_container{/*height:114px;*/ padding:0 20px; overflow-y:auto;}
-.modal .modal_content{display:flex; flex-direction:column; justify-content:center; min-height:100%; font-size:16px; line-height:1.5;}
-.modal .modal_content .center{text-align:center;}
-.modal .modal_content .result_info>li{display:flex; gap:12px; align-items:center; padding:4px 0;}
-.modal .modal_content .result_info>li>span{min-width:120px;}
-.modal .modal_content .result_info>li>strong{font-weight:normal;}
-.modal .modal_content .result_info>li>strong>span:last-child{margin-left:4px;}
-.modal .modal_content .img_wrap>img{display:block; width:100%;}
-.modal .btn_area{margin-top:20px;}
-.modal .btn_close{position:absolute; top:12px; right:12px; display:block; width:36px; height:36px; background:url(/public/images/icon_close.svg) no-repeat center / 14px;}
+.modal{position: fixed; left: 0; right: 0; top: 0; bottom: 0; background-color: rgba(0,0,0,0.6); z-index: 1002;}
+.modal .modal_wrap{position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); display: flex; flex-direction: column; gap: 20px; width: 444px; max-height: 375px; padding: 40px 20px; background-color: #fff; border-radius: 8px;}
+.modal.lg .modal_wrap{width: 512px; max-height: 480px;}
+.modal .modal_title{font-family: pt-b; font-size: 20px; line-height: 1.5; text-align:center;}
+.modal .title_sub{margin-top: 12px; color: var(--gray_04); font-size: 14px; line-height: 1.5; text-align: center;}
+.modal .modal_container{/*height:114px;*/ padding: 0 20px; overflow-y: auto;}
+.modal .modal_content{display: flex; flex-direction: column; justify-content: center; min-height: 00%; font-size: 16px; line-height: 1.5;}
+.modal .modal_content .center{text-align: enter;}
+.modal .modal_content .img_wrap>img{display: block; width: 100%;}
+.modal .btn_area{margin-top: 20px;}
+.modal .btn_close{position: absolute; top: 12px; right: 12px; display: block; width: 36px; height: 36px; background: url(/public/images/icon_close.svg) no-repeat center / 14px;}
