--- a/trip_planner_front/src/page/mypage/createTrips.css
+++ b/trip_planner_front/src/page/mypage/createTrips.css
@@ -2,7 +2,7 @@
 .createTrips_wrap{display: flex; height: 700px; min-height: calc(100vh - 61px);}
 .createTrips_wrap>.map_area{flex-grow: 1;}
 .createTrips_wrap>.left_area{position: relative; display: flex;}
-.createTrips_wrap .trips_wrap{position: relative; display: flex; flex-direction: column; width: 377px; padding: 30px 0 112px; border-right: 1px solid var(--line_03); background-color: #fff;}
+.createTrips_wrap .trips_wrap{position: relative; display: flex; flex-direction: column; width: 377px; padding: 30px 0 105px; border-right: 1px solid var(--line_03); background-color: #fff;}
 .createTrips_wrap .search_wrap{position: absolute; left: 377px; top: 0; bottom: 0; display: flex; flex-direction: column; width: 377px; padding: 30px 0; border-right: 1px solid var(--line_03); background-color: #fff; z-index: 100;}
 
 .createTrips_wrap .trips_wrap>.trips_input_wrap{padding: 0 20px;}
@@ -21,11 +21,12 @@
 .createTrips_wrap .trips_wrap>.trips_plan_wrap{margin-top: 20px; padding: 20px 20px 40px; overflow-y: auto;}
 .createTrips_wrap .trips_wrap .set_day_wrap+.set_day_wrap{margin-top: 40px;}
 .createTrips_wrap .day_title_wrap{display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid var(--line_03);}
-.createTrips_wrap .day_title_wrap .day_title{font-family: pt-b; font-size: 16px; line-height: 24px;}
-.createTrips_wrap .day_title_wrap .day_title>.tripDay{margin-left: 4px; color: var(--gray_05);}
+.createTrips_wrap .day_title_wrap .day_title{display: flex; align-items: center; gap: 4px; font-family: pt-b; font-size: 16px; line-height: 24px;}
+.createTrips_wrap .day_title_wrap .day_title>.tripDay{color: var(--gray_05); font-size: 14px;}
 .createTrips_wrap .day_title_wrap .btn_tripCost{position: relative; display: inline-block; padding-left: 12px; color: var(--main_02); font-size: 14px; line-height: 40px;}
 .createTrips_wrap .day_title_wrap .btn_tripCost::before{content: "+"; display: block; position: absolute; top: 0; bottom: 0; left: 0; width: 12px; font-size: 14px; line-height: 40px; text-align: center;}
-.createTrips_wrap .day_title_wrap .btn_tripCost.on{} 
+.createTrips_wrap .day_title_wrap .btn_tripCost.on{padding-left: 22px;}
+.createTrips_wrap .day_title_wrap .btn_tripCost.on::before{content: ""; width: 22px; background: url(/public/images/icon_tripCost.svg) no-repeat center left / contain;} 
 
 .createTrips_wrap .place_list{position: relative; display: flex; flex-direction: column; gap: 12px;}
 .createTrips_wrap .day_items_wrap{position: relative;}
@@ -47,16 +48,16 @@
 .createTrips_wrap .place_list>.item .item_box .place_phone{margin-top: 8px; padding-left: 20px; background: url(/public/images/icon_call_blue.svg) no-repeat left center / 16px ; color: var(--info); font-family: pt-b; font-size: 13px; line-height: 20px;}
 .createTrips_wrap .place_list>.item .item_box_content{flex-grow: 1; max-width: calc(100% - 54px);}
 .createTrips_wrap .result_place_area .place_list>.item .item_box_content{max-width: calc(100% - 74px);}
-.createTrips_wrap .place_list>.item.tripTodo .item_box .item_box_content{display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2; text-overflow: ellipsis; overflow: hidden; font-size: 14px; line-height: 1.5;}
+.createTrips_wrap .place_list>.item.tripTodo .item_box .item_box_content{display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2; text-overflow: ellipsis; overflow: hidden; min-height: 21px; font-size: 14px; line-height: 1.5; cursor: text;}
 .createTrips_wrap .place_list>.item .item_btn_wrap{display: flex; gap: 6px; align-self: center;}
 .createTrips_wrap .place_list>.item .item_btn_wrap .btn_addPlace{white-space: nowrap; padding: 4px 5px 4px 22px; background: url(/public/images/icon_calendar_sm_blue.svg) no-repeat 4px center / 16px; font-family: pt-b;}
 .createTrips_wrap .place_list>.item .item_btn_wrap .btn_changeOrder{display: block; width: 24px; height: 24px; border: 1px solid var(--line_02); border-radius: 50%;}
 .createTrips_wrap .place_list>.item .item_btn_wrap .btn_changeOrder.down{background: url(/public/images/icon_changeOrder_down.svg) no-repeat center / contain;}
 .createTrips_wrap .place_list>.item .item_btn_wrap .btn_changeOrder.up{background: url(/public/images/icon_changeOrder_up.svg) no-repeat center / contain;}
-.tripTodo .btn_delete{position: absolute; display: block; top: 0; right: 0; width: 30px; height: 30px; background: url(/public/images/icon_close_gray.svg) no-repeat center / contain;}
+.tripTodo .btn_delete{position: absolute; display: block; top: 0; right: 0; width: 30px; height: 30px; background: url(/public/images/icon_close_gray.svg) no-repeat center / 24px;}
 
 .createTrips_wrap .trips_wrap>.btn_area{position: absolute; left: 0; right: 0; bottom: 0; padding: 30px 20px;}
-.createTrips_wrap .trips_wrap>.btn_area::before{content: ''; display: block; position: absolute; top: -7px; left: 0; right: 0; height: 8px; background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,1));}
+.createTrips_wrap .trips_wrap>.btn_area::before{content: ''; display: block; position: absolute; top: -12px; left: 0; right: 0; height: 12px; background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,1), rgba(255,255,255,1));}
 .createTrips_wrap .btn_area{margin-top: 24px;}
 .createTrips_wrap .btn_area [class^=btn_]{flex-grow: 1;}
 
