--- a/trip_planner_front/src/page/INN/roomReg.css
+++ b/trip_planner_front/src/page/INN/roomReg.css
@@ -42,6 +42,15 @@
 .room-reg-image {
   margin-top: 30px;
 }
+.room-reg-min-people-wrap-title {
+  font-family: pt-b;
+  font-size: 18px;
+  margin-top: 30px;
+}
+.room-reg-min-people-wrap > div:last-child {
+  width: 250px;
+  margin-top: 20px;
+}
 .room-reg-max-people-wrap-title {
   font-family: pt-b;
   font-size: 18px;
@@ -164,4 +173,23 @@
 }
 .room-reg-wrap .btn-area > button {
   width: 100%;
+}
+.select-room-name > span {
+  font-family: pt-b;
+}
+.select-inn-top {
+  border: 1px solid #eee;
+  padding: 15px;
+}
+.select-room-name {
+  margin-bottom: 10px;
+}
+.select-img-box {
+  width: 290px;
+  height: 200px;
+}
+.select-img-box > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
