--- a/trip_planner_front/src/page/blog/blog.css
+++ b/trip_planner_front/src/page/blog/blog.css
@@ -74,21 +74,47 @@
   line-height: 40px;
   font-family: pt-eb;
 }
-.blog-list-main-wrap {
-  border: 1px solid #1e1e1e;
+.blog-list-wrap {
+  overflow: hidden;
 }
-.blog-list-content {
-  height: 500px;
-  padding: 100px;
-  box-sizing: border-box;
+.blog-item {
   float: left;
   box-sizing: border-box;
   width: calc(100% / 2);
-  padding: 30px;
+  padding: 70px;
   cursor: pointer;
+  text-align: center;
 }
-.blog-list-img {
-  height: 200px;
+.blog-item-img:hover {
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
+}
+.blog-item-img {
+  height: 250px;
+}
+.blog-item > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+blog-list-box {
+  overflow: hidden;
+  padding: 10px;
+}
+.blog-item-info {
+  margin-top: 30px;
+}
+.board-info-title {
+  font-size: 1, 2em;
+  font-family: pt-eb;
+  margin-bottom: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.blog-user-info {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
 }
 
 /*blogWrite*/
