--- a/trip_planner_front/src/page/blog/blog.css
+++ b/trip_planner_front/src/page/blog/blog.css
@@ -76,34 +76,37 @@
 }
 .blog-list-wrap {
   overflow: hidden;
+  margin: 0 auto;
+  width: 900px;
 }
 .blog-item {
   float: left;
   box-sizing: border-box;
   width: calc(100% / 2);
-  padding: 70px;
+  padding: 85px;
   cursor: pointer;
   text-align: center;
+  border-radius: 10px;
 }
-.blog-item-img:hover {
+.blog-item:hover {
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
+  border: 1px solid #c1c1c1;
 }
-.blog-item-img {
-  height: 250px;
-}
-.blog-item > img {
+.blog-item img {
   width: 100%;
   height: 100%;
   object-fit: contain;
+  border-radius: 10px;
 }
 blog-list-box {
   overflow: hidden;
   padding: 10px;
 }
 .blog-item-info {
-  margin-top: 30px;
+  margin-top: 15px;
+  padding: 20px;
 }
-.board-info-title {
+.blog-info-title {
   font-size: 1, 2em;
   font-family: pt-eb;
   margin-bottom: 10px;
@@ -112,9 +115,13 @@ blog-list-box {
   text-overflow: ellipsis;
 }
 .blog-user-info {
+  color: var(--main_01);
   margin-top: 30px;
   display: flex;
   justify-content: space-between;
+}
+.page-box {
+  padding-top: 60px;
 }
 
 /*blogWrite*/
