--- a/trip_planner_front/src/component/formFrm.css
+++ b/trip_planner_front/src/component/formFrm.css
@@ -12,7 +12,7 @@ input::placeholder{color: var(--gray_05);}
 
 button[disabled]{opacity: 0.2;}
 .btn_primary{min-width: 120px; padding: 11px 20px; border: 1px solid var(--main_01); border-radius: 24px; background-color: var(--main_01); color: #fff; font-size: 14px; line-height: 1.5; text-align: center; transition: all 0.2s;}
-[class^=btn_]:hover{opacity: 0.9;}
+[class^=btn_]:not([disabled]):hover{opacity: 0.9;}
 .btn_secondary{min-width: 120px; padding: 11px 20px; border: 1px solid var(--main_02); border-radius: 24px; background-color: var(--main_02); color: #fff; font-size: 14px; line-height: 1.5; text-align: center; transition: all 0.2s;}
 .btn_primary.outline{background-color: #fff; color: var(--main_01);}
 .btn_secondary.outline{background-color: #fff; color: var(--main_02);}
