--- a/trip_planner_front/src/page/blog/blog.css
+++ b/trip_planner_front/src/page/blog/blog.css
@@ -77,13 +77,13 @@
 .blog-list-wrap {
   overflow: hidden;
   margin: 0 auto;
-  width: 900px;
+  width: 100%;
 }
 .blog-item {
   float: left;
   box-sizing: border-box;
-  width: calc(100% / 2);
-  padding: 85px;
+  width: calc(100% / 3);
+  padding: 70px;
   cursor: pointer;
   text-align: center;
   border-radius: 10px;
@@ -234,6 +234,9 @@ blog-list-box {
   width: 800px;
   margin: 0 auto;
 }
+.blog-view-wrap h2 {
+  margin: 0;
+}
 .blog-view-info {
   display: flex;
   justify-content: space-between;
@@ -262,9 +265,21 @@ blog-list-box {
 }
 .day-list {
   border-top: 1px solid #c1c1c1;
-  text-align: center;
   padding: 30px;
+}
+
+.date-day {
+  color: var(--main_02);
+  font-family: pt-eb;
+  font-size: 25px;
+  margin-bottom: 50px;
+  text-align: left;
 }
 .btn-box {
   text-align: right;
+  margin-bottom: 10px;
+}
+.btn-box button:hover {
+  background-color: var(--main_02);
+  color: #fff;
 }
