--- a/trip_planner_front/src/page/tour/tour.css
+++ b/trip_planner_front/src/page/tour/tour.css
@@ -7,6 +7,7 @@
 
 .tour-list-title {
   overflow: hidden;
+  margin-bottom: 40px;
 }
 .tour-list-title > h2 {
   float: left;
@@ -57,41 +58,38 @@
 }
 
 /* 추천 투어상품 */
-.tour-list-item > h2 {
-  margin-bottom: 24px;
-}
-
-.tour-item-wrap {
+.tour-prod-wrap {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
-.tour-item-wrap > .tour-item {
+.tour-prod-wrap > .tour-prod {
   box-sizing: border-box;
   padding: 20px;
-  cursor: pointer;
   display: flex;
   flex-direction: column;
   width: calc(25% - 40px);
   margin-bottom: 10px;
 }
 
-.tour-item-wrap > .tour-item > .tour-bookmark {
+.tour-prod-wrap > .tour-prod > .tour-bookmark {
   overflow: hidden;
 }
-.tour-item-wrap > .tour-item > .tour-bookmark > img {
+.tour-prod-wrap > .tour-prod > .tour-bookmark > img {
   max-width: 30px;
   float: right;
+  cursor: pointer;
 }
 
-.tour-item-wrap > .tour-item > .tour-item-img {
+.tour-prod-wrap > .tour-prod > .tour-prod-img {
   width: 100%;
   height: auto;
   border-radius: 10px;
   margin-bottom: 10px;
+  cursor: pointer;
 }
 
-.tour-item-wrap > .tour-item > .tour-item-name {
+.tour-prod-wrap > .tour-prod > .tour-prod-name {
   font-size: 1.2em;
   margin-top: auto; /* tour-item-name을 아래쪽으로 이동시킴 */
   white-space: nowrap;
@@ -100,13 +98,12 @@
   width: 100%;
 }
 
-.tour-item-wrap > .tour-item > .tour-item-info {
-  font-size: 0.9em;
+.tour-prod-wrap > .tour-prod > .tour-prod-info {
   margin-top: 5px;
 }
 
-.tour-item-wrap > .tour-item > .tour-item-price {
-  font-size: 1.1em;
+.tour-prod-wrap > .tour-prod > .tour-prod-price {
+  font-size: 1.3em;
   font-weight: bold;
   color: #e9511c; /* 주황색 */
   margin-top: 5px;
@@ -127,42 +124,42 @@
 }
 
 /* 검색 상품 */
-.tour-item-zone > .tour-item {
+.tour-prod-zone > .tour-prod {
   display: flex;
   margin-bottom: 30px;
 }
 
-.tour-item-zone > .tour-item img {
+.tour-prod-zone > .tour-prod img {
   height: 200px;
   width: 300px;
   margin-right: 40px;
   border-radius: 10px;
 }
 
-.tour-item-zone > .tour-item > .tour-item-info {
+.tour-prod-zone > .tour-prod > .tour-prod-info {
   flex: 1; /* 남은 공간을 모두 차지하기 위해 flex-grow 사용 */
 }
 
-.tour-item-zone > .tour-item > .tour-item-info > .tour-item-name {
+.tour-prod-zone > .tour-prod > .tour-prod-info > .tour-prod-name {
   font-size: 24px;
   font-family: pt-b;
   padding-top: 5px;
   margin-bottom: 5px;
 }
-.tour-item-zone > .tour-item > .tour-item-info > .tour-item-subname {
+.tour-prod-zone > .tour-prod > .tour-prod-info > .tour-prod-subname {
   font-size: 19px;
   margin-bottom: 5px;
 }
-.tour-item-zone > .tour-item > .tour-item-info > .tour-item-limit {
+.tour-prod-zone > .tour-prod > .tour-prod-info > .tour-prod-limit {
   color: #666;
 }
-.tour-item-zone > .tour-item > .tour-item-info > .tour-item-price {
+.tour-prod-zone > .tour-prod > .tour-prod-info > .tour-prod-price {
   font-size: 36px;
   font-family: pt-b;
   text-align: right;
   padding-right: 120px;
 }
-.tour-item-zone > .tour-item > .tour-item-info > .tour-item-bookmark {
+.tour-prod-zone > .tour-prod > .tour-prod-info > .tour-prod-bookmark {
   width: 30px;
   height: 30px;
 }
