--- a/trip_planner_front/src/page/tour/tour.css
+++ b/trip_planner_front/src/page/tour/tour.css
@@ -7,7 +7,6 @@
 
 .tour-list-title {
   overflow: hidden;
-  margin-bottom: 40px;
 }
 .tour-list-title > h2 {
   float: left;
@@ -58,6 +57,10 @@
 }
 
 /* 추천 투어상품 */
+.tour-list-prod h2 {
+  margin-bottom: 24px;
+}
+
 .tour-prod-wrap {
   display: flex;
   flex-wrap: wrap;
@@ -68,11 +71,16 @@
   padding: 20px;
   display: flex;
   flex-direction: column;
-  width: calc(25% - 40px);
-  margin-bottom: 10px;
+  width: calc(25%);
+  position: relative;
 }
 
 .tour-prod-wrap > .tour-prod > .tour-bookmark {
+  position: absolute; /* 절대 위치 지정 */
+  top: 0; /* 상단에 위치 */
+  right: 0; /* 우측에 위치 */
+  margin-top: 25px; /* 원하는 여백 설정 */
+  margin-right: 25px; /* 원하는 여백 설정 */
   overflow: hidden;
 }
 .tour-prod-wrap > .tour-prod > .tour-bookmark > img {
@@ -81,15 +89,15 @@
   cursor: pointer;
 }
 
-.tour-prod-wrap > .tour-prod > .tour-prod-img {
+.tour-prod-wrap > .tour-prod > .tour-prod-img > img {
   width: 100%;
-  height: auto;
+  height: 210px;
   border-radius: 10px;
-  margin-bottom: 10px;
   cursor: pointer;
+  margin-bottom: 10px;
 }
 
-.tour-prod-wrap > .tour-prod > .tour-prod-name {
+.tour-prod-wrap > .tour-prod > .tour-prod-info > .tour-prod-name {
   font-size: 1.2em;
   margin-top: auto; /* tour-item-name을 아래쪽으로 이동시킴 */
   white-space: nowrap;
@@ -98,11 +106,11 @@
   width: 100%;
 }
 
-.tour-prod-wrap > .tour-prod > .tour-prod-info {
+.tour-prod-wrap > .tour-prod > .tour-prod-info .tour-prod-type {
   margin-top: 5px;
 }
 
-.tour-prod-wrap > .tour-prod > .tour-prod-price {
+.tour-prod-wrap > .tour-prod > .tour-prod-info > .tour-prod-price {
   font-size: 1.3em;
   font-weight: bold;
   color: #e9511c; /* 주황색 */
