--- a/trip_planner_front/src/page/tour/tour.css
+++ b/trip_planner_front/src/page/tour/tour.css
@@ -64,7 +64,7 @@
 .tour-prod-wrap {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 .tour-prod-wrap > .tour-prod {
   box-sizing: border-box;
@@ -120,7 +120,7 @@
   margin-top: 5px;
 }
 
-/* 더보기 */
+/* 리스트 더보기 */
 .tour-prod-wrap > .show-tour-more {
   margin-top: 84px;
   width: 100%;
