--- a/trip_planner_front/src/page/notice/notice.css
+++ b/trip_planner_front/src/page/notice/notice.css
@@ -5,31 +5,62 @@
 기타 #89cff0 #f4f5ef #8f705b #035e7b
 */
 
-.contents.notice .notice-tbl{
-    width: 1200px;
-    margin: 0 auto;
+.contents.notice .notice-tbl {
+  width: 1200px;
+  margin: 0 auto;
 }
 
-.contents.notice tr{
-    height: 50px;
-    line-height: 50px;
+.contents.notice tr {
+  height: 50px;
+  line-height: 50px;
 }
 
-.contents.notice tbody>tr:hover{
-    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.3);
-    border: 1px solid #c1c1c1;
+.contents.notice tbody > tr:hover {
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.3);
+  border: 1px solid #c1c1c1;
 }
 
-.contents.notice thead>tr{
-    background-color: #89cff0;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+.contents.notice thead > tr {
+  background-color: #89cff0;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 
-.contents.notice tbody>tr:nth-child(2n){
-    background-color: #f4f5ef;
+.contents.notice tbody > tr:nth-child(2n) {
+  background-color: #f4f5ef;
 }
 
-.contents.notice td{
-    text-align: center;
+.contents.notice td {
+  text-align: center;
+}
+
+.notice-input-wrap {
+  width: 1000px;
+  margin: 0 auto;
+}
+
+.contents.notice .notice-title {
+  border-bottom: 4mm double rgba(0, 92, 170, 0.3);
+  text-indent: 10px;
+}
+
+.contents.notice h3 {
+  margin-bottom: 10px;
+}
+
+.contents.notice .notice-info {
+  display: flex;
+  justify-content: space-between;
+  font-family: pt-r;
+}
+
+.contents.notice .notice-content {
+  padding: 20px;
+}
+
+.contents.notice .notice-content > textarea {
+  resize: none;
+  width: 100%;
+  height: 600px;
+  overflow-y: scroll;
 }
