투어검색 디테일 작업

--- a/trip_planner_front/src/page/tour/tour.css
+++ b/trip_planner_front/src/page/tour/tour.css
@@ -186,6 +186,7 @@
 .tour-prod-zone > .tour-prod > .tour-prod-info > .tour-prod-bookmark {
   width: 30px;
   height: 30px;
+  cursor: pointer;
 }
 
 /* 더 보기 버튼 */
