투어 카테고리 검색완

--- a/trip_planner_front/src/page/tour/tour.css
+++ b/trip_planner_front/src/page/tour/tour.css
@@ -33,12 +33,13 @@
   margin-bottom: 8px; /* 이미지와 설명 사이의 간격 조절 */
   border-radius: 25px;
   transition: transform 0.3s ease;
+  cursor: pointer;
 }
 .tour-icon-wrap img:hover {
   transform: scale(1.2); /* 마우스 오버 시 크기를 1.2배로 확대 */
 }
 
-.tour-icon-wrap div {
+.tour-icon-wrap > div > div {
   text-align: center; /* 설명 텍스트를 중앙 정렬 */
   width: 100%; /* 각 설명을 전체 너비로 설정하여 한 줄로 배치 */
 }
