--- a/trip_planner_front/src/page/admin/admin.css
+++ b/trip_planner_front/src/page/admin/admin.css
@@ -26,3 +26,35 @@
 .input_wrap.coupon-input .input:focus{
     background-color: rgba(0, 92, 170, 0.2); 
 }
+
+/*회원관리*/
+.contents.memberMgmt .memberMgmt_wrap{
+    width: 1200px;
+}
+
+.contents.memberMgmt .memberMgmt-tbl{
+    width: 1200px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.contents.memberMgmt .memberMgmt-tbl>thead{
+    background-color: rgba(244, 245, 239, 0.3);
+    outline: 1px solid #e9511c;
+}
+
+.contents.memberMgmt tr {
+    height: 50px;
+    line-height: 50px;
+  }
+  
+  .contents.memberMgmt tbody > tr:hover {
+    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.3);
+    border: 1px solid #c1c1c1;
+  }
+  
+  .contents.memberMgmt thead > tr {
+    background-color: rgba(244, 245, 239, 0.3);
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+  }
