--- a/trip_planner_front/src/page/blog/blog.css
+++ b/trip_planner_front/src/page/blog/blog.css
@@ -291,11 +291,53 @@ blog-list-box {
   background-color: var(--main_02);
   color: #fff;
 }
+.comment-insert-box {
+  margin-bottom: 10px;
+}
 .comment-content-box input {
   width: 85%;
   float: left;
   text-indent: 10px;
 }
-.comment-content-box h2 {
-  margin-bottom: 20px;
+.comment-content-box h3 {
+  text-align: left;
+  padding-top: 20px;
+  border-top: 1px solid #c1c1c1;
+}
+.comment-list-box {
+  overflow: hidden;
+  border-bottom: 1px solid #c1c1c1;
+}
+.comment-number {
+  width: 100px;
+  height: 70px;
+  text-align: center;
+  line-height: 70px;
+  float: left;
+  color: var(--main_01);
+  font-family: pt-eb;
+  border-right: 1px solid #c1c1c1;
+}
+.comment-info {
+  text-align: right;
+  font-size: 80%;
+}
+
+.comment-content {
+  text-indent: 15px;
+  font-family: pt-eb;
+  padding-top: 10px;
+}
+.comment-nickname {
+  color: var(--main_02);
+}
+.comment-date {
+  padding-bottom: 10px;
+}
+.btn-area {
+  text-align: right;
+  margin-top: 5px;
+}
+.first {
+  margin-right: 10px;
 }
