투어검색창 마무리

--- a/trip_planner_front/src/page/tour/tour.css
+++ b/trip_planner_front/src/page/tour/tour.css
@@ -158,6 +158,11 @@
   height: 100%; /* 부모 요소의 높이를 차지하도록 설정 */
 }
 
+.tour-list-empty > .tour-loading-icon {
+  display: flex;
+  align-items: center;
+}
+
 .tour-prod-zone > .tour-prod {
   display: flex;
   margin-bottom: 30px;
