--- a/trip_planner_front/src/page/member/member.css
+++ b/trip_planner_front/src/page/member/member.css
@@ -72,3 +72,13 @@
 .b_auth{
     width: 120px;
 }
+
+.contents.login #password{
+    position: relative;
+}
+
+.contents.login #showPw{
+    position: absolute;
+    right: 380px;
+    cursor: pointer;
+}
