--- a/trip_planner_front/src/page/member/member.css
+++ b/trip_planner_front/src/page/member/member.css
@@ -73,12 +73,12 @@
     width: 120px;
 }
 
-.contents.login #password{
+.contents.login #password-input{
     position: relative;
 }
 
 .contents.login #showPw{
-    position: absolute;
-    right: 380px;
+    position:absolute;
+    right: 10px;
     cursor: pointer;
 }
