--- a/trip_planner_front/src/page/tour/tourSearchBox.css
+++ b/trip_planner_front/src/page/tour/tourSearchBox.css
@@ -31,12 +31,12 @@
   min-width: 80%;
   padding-left: 10px;
 }
-.tour-search-wrap > .calendar-wrap {
+.tour-search-wrap > .tour-calendar-wrap {
   width: 40%;
   padding-left: 20px;
   overflow: hidden;
 }
-.tour-search-wrap > .calendar-wrap * {
+.tour-search-wrap > .tour-calendar-wrap * {
   font-size: 20px;
   border: none;
 }
