투어 상세 진행중

--- a/trip_planner_front/src/page/tour/tourSearchBox.css
+++ b/trip_planner_front/src/page/tour/tourSearchBox.css
@@ -40,6 +40,6 @@
   font-size: 20px;
   border: none;
 }
-.css-nxo287-MuiInputBase-input-MuiOutlinedInput-input {
-  width: 60% !important;
+.tour-calendar-wrap .css-nxo287-MuiInputBase-input-MuiOutlinedInput-input {
+  width: 60%;
 }
